--- a/index.html
+++ b/index.html
@@ -206,12 +206,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <span class="badge badge-pill badge-primary">Feb '24</span>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>
-                                <span class="badge badge-pill badge-primary">Oct '23</span>
+                                <span class="badge badge-pill badge-primary">Oct '24</span>
                             </td>
                             <td>
                                 The pre-print is now available on <a href="https://arxiv.org/abs/2410.08258" target="_blank">arXiv</a>.
@@ -376,14 +371,12 @@
                 <div class="row justify-content-md-center">
                     <div class="col-sm-12 rounded p-3 m-2" style="background-color:lightgray;">
                         <small class="code">
-                            @inproceedings{mayilvahanan2024does,<br>
-                                &nbsp;&nbsp;title={Does CLIP's Generalization Performance Mainly Stem from High Train-Test Similarity?},<br>
-                                &nbsp;&nbsp;author={<br>
-                                &nbsp;&nbsp;&nbsp;&nbsp;Prasanna Mayilvahanan and Thadd{\"a}us Wiedemer and Evgenia Rusak and Matthias Bethge and Wieland Brendel<br>
-                                &nbsp;&nbsp;},<br>
-                                &nbsp;&nbsp;booktitle={The Twelfth International Conference on Learning Representations},<br>
-                                &nbsp;&nbsp;year={2024},<br>
-                                &nbsp;&nbsp;url={https://openreview.net/forum?id=tnBaiidobu}<br>
+                            @inproceedings{mayilvahanan2025clipdg,<br>
+                                  &nbsp;&nbsp;title={In Search of Forgotten Domain Generalization},<br>
+                                  &nbsp;&nbsp;author={Prasanna Mayilvahanan and Roland Zimmermann and Thaddäus Wiedemer and Evgenia Rusak and Attila Juhos and Matthias Bethge and Wieland Brendel},<br>
+                                  &nbsp;&nbsp;booktitle={The Thirteenth International Conference on Learning Representations},<br>
+                                  &nbsp;&nbsp;year={2025},<br>
+                                  &nbsp;&nbsp;url={https://openreview.net/forum?id=Fk3eod9aaD}<br>
                             }
                         </small>
                     </div>
